# NetDynFlow

./: Checklist_v2.md  LICENSE.txt  NamingConventions.md  README.md  TODO_ObjectOriented.md  TODO_v2.md  TODO_v2_Release.md  Version2_NamingConventions.md  Version2_checklist.md  pyproject.toml  setup.py
Examples/: Basics_Dynamic_Communicability.ipynb  Tutorial_1_Basics.ipynb
netdynflow/: __init__.py  core.py  core2.py  core3.py  io_helpers.py  metrics.py  metrics2.py  metrics_test.py  netmodels.py  simulate.py  simulate_numba.py  tools.py
